[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cenas/HotbarHud.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/InventoryHud.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Hotbar.gd" type="Script" id=3]
[ext_resource path="res://Scripts/HudController.gd" type="Script" id=6]

[node name="HudController" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="HotbarHud" parent="." instance=ExtResource( 1 )]

[node name="Hotbar" type="Node" parent="HotbarHud"]
script = ExtResource( 3 )

[node name="InventoryHud" parent="." instance=ExtResource( 2 )]
